<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kaderblick Camera Control</string>
    <string name="camera_1">Camera 1</string>
    <string name="camera_2">Camera 2</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="camera_ip_hint">Camera IP Address</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connected">Connected to %1$s</string>
    <string name="status_connecting">Connecting...</string>
    <string name="error_camera_permission">Camera permission is required</string>
    <string name="error_connection">Connection error: %1$s</string>
    <string name="dual_camera_mode">Dual Camera Mode</string>
    <string name="settings">Settings</string>
    <string name="camera_preview">Camera Preview</string>
    <string name="enter_ip_address">Please enter camera IP address</string>
    <string name="connected_successfully">Connected successfully</string>
    <string name="disconnected_message">Disconnected</string>
    <string name="photo_captured_locally">Photo captured locally</string>
    <string name="photo_captured_wireless">Photo captured on wireless camera</string>
    <string name="wireless_capture_error">Wireless capture error: %1$s</string>
    <string name="recording_started">Recording started</string>
    <string name="wireless_recording_started">Wireless recording started</string>
    <string name="recording_stopped">Recording stopped</string>
    <string name="wireless_recording_stopped">Wireless recording stopped</string>
    <string name="camera_switched">Camera switched</string>
</resources>
